--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,17 @@
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
-    	<<label for="Bank Name">Choose a car:</label>
+    	<label for="Bank Name"></label>
 
-		<select name="Bank" id="cars">
+		<select name="Bank" id="banks">
 		  <option value="axis">Axis</option>
 		  <option value="ICICI">ICICI</option>
 		  <option value="RBL">RBL</option>
 		  <option value="Federal Bank">Federal Bank</option>
 		</select>
         
-
+		<br>
+		<br>
         <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
     </form>
 
