--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <!--From https://codepen.io/frytyler/pen/EGdtg-->
 <head>
   <meta charset="UTF-8">
-  <title>ML API</title>
+  <title>Capstone Group6</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
@@ -14,14 +14,25 @@
 
 <body>
  <div class="login">
-	<h1>Predict Salary Analysis</h1>
+	<h1>Stock Price Prediction</h1>
 
      <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-    	<input type="text" name="experience" placeholder="Experience" required="required" />
-        <input type="text" name="test_score" placeholder="Test Score" required="required" />
-		<input type="text" name="interview_score" placeholder="Interview Score" required="required" />
+    <form action="{{ url_for('main_function')}}"method="post">
+    	<label for="Bank Name"> Choose the stock : </label>
+		
+		<br>
+		<br>
+		
+		<select name="Bank" id="banks">
+		  <option value="AxisBank">Axis</option>
+		  <option value="ICICI">ICICI</option>
+		  <option value="RBL">RBL</option>
+		  <option value="Federal Bank">Federal Bank</option>
+		</select>
 
+		<br>
+		<br>
+		
         <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
     </form>
 
